[tool.poetry]
name = "airflint"
version = "0.3.2-alpha"
description = "Enforce Best Practices for all your Airflow DAGs. ⭐"
authors = ["Felix Uellendall <feluelle@pm.me>"]
license = "Apache-2.0"
keywords = ["airflow", "best-practices", "dag"]
readme = "README.md"

[tool.poetry.scripts]
airflint = "airflint.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
refactor = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["airflint/__main__.py"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "S", "UP", "PGH", "D", "I", "A"]
ignore = ["D100", "D102"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "D"]
"airflint/rules/*.py" = ["S101"]
"airflint/__main__.py" = ["D"]

[tool.ruff.pydocstyle]
convention = "pep257"
